# I-shadow

./: .gitignore  LICENSE  NOTICE  README.md  config-geometry-default.json  i-shadow.py  mypy.ini  pyproject.toml  requirements.txt
icon/: NOTICE
mypy-stubs/: sounddevice.pyi  vosk.pyi
mypy-stubs/nltk/: __init__.pyi  tokenize.pyi
