[project]
name = "I-shadow"
version = "2025.02.09"
description = "Default template for PDM package"
authors = [
    {name = "Katô Taisei", email = "katotaisei064@gmail.com"},
]
dependencies = ["sounddevice>=0.5.1", "vosk>=0.3.45", "nltk>=3.9.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
